# atlas-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: codeql.yml  run-tests.yml  scorecard.yml
docs/: EXAMPLES.md
examples/: Cargo.toml  README.md
examples/oss-na-25-demo/: README.md  collect_mnist_provenance.sh
examples/src/: command.rs  config.rs  error.rs  framework.rs  lib.rs  main.rs  recorder.rs  utils.rs
examples/src/subcommands/: dataset.rs  evaluation.rs  manifest.rs  mod.rs  model.rs  software.rs  utility.rs
examples/workflows/mnist/: README.md  download.py  eval.py  mnist_complete_pipeline.yaml  model.py  pyproject.toml  train.py
examples/workflows/oss25_demo/: README.md  oss25_demo_pipeline.yaml
examples/workflows/simple_demo/: config.yaml
examples/workflows/simple_demo/examples/data/: test_data.csv
examples/workflows/simple_demo/examples/models/: test_model.pkl
src/: lib.rs  main.rs
src/cc_attestation/: mock.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/hash/: mod.rs
src/in_toto/: dsse.rs  mod.rs
src/manifest/: common.rs  config.rs  mod.rs  signer.rs
src/signing/: mod.rs  signable.rs
src/slsa/: cli.rs  generators.rs  mod.rs
src/storage/: database.rs  filesystem.rs  rekor.rs  traits.rs
src/tests/: cc_attestation.rs  common.rs  manifest_attestation.rs
storage_service/: Dockerfile
tests/: test_oms_many_ingredients.sh  test_oms_single_ingredient.sh
tests/common/: config.sh  keys.sh
