[package]
name = "atlas-cli"
version = "0.1.1"
edition = "2024"
description = "Machine Learning Lifecycle & Transparency Manager - Create and verify manifests for ML models and datasets"
documentation = "https://docs.rs/atlas-cli"
homepage = "https://github.com/IntelLabs/atlas-cli"
repository = "https://github.com/IntelLabs/atlas-cli"
readme = "README.md"
license = "Apache-2.0"
keywords = ["c2pa", "machine-learning", "provenance", "transparency", "cli"]
categories = ["command-line-utilities", "science", "cryptography"]
exclude = [
    "/.github/*",
    "/examples/*",
    "/tests/*",
    "/.gitignore",
    "/Makefile",
]

[[bin]]
name = "atlas-cli"
path = "src/main.rs"

[features]
default = []
yaml = []
with-tdx = ["tdx_workload_attestation/host-gcp-tdx"]

[dependencies]
atlas-c2pa-lib = { version = "0.1.2" }

# TDX
tdx_workload_attestation = { version = "0.1.0", default-features = false }

# Core libraries
base64 = "0.22"
chrono = "0.4.41"  # For timestamp generation in mock attestation reports
env_logger = "0.11"
hex = "0.4"
indicatif = "0.18"
lazy_static = "1.4"
log = "0.4"
openssl = "0.10.73"
sha2 = "0.10"
thiserror = "2.0.12"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.17", features = ["v4"] }
walkdir = "2.4"
zeroize = { version = "1.8", features = ["derive"] }

# CLI and async/runtime
clap = { version = "4.5", features = ["derive"] }
tokio = "1.47.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
subtle = "2.6.1"

[dev-dependencies]
tempfile = "3.20.0"
