[package]
name = "atlas-cli"
version = "0.2.0"
edition = "2024"
description = "Machine Learning Lifecycle & Transparency Manager - Create and verify manifests for ML models and datasets"
documentation = "https://docs.rs/atlas-cli"
homepage = "https://github.com/IntelLabs/atlas-cli"
repository = "https://github.com/IntelLabs/atlas-cli"
readme = "README.md"
license = "Apache-2.0"
keywords = ["c2pa", "machine-learning", "provenance", "transparency", "cli"]
categories = ["command-line-utilities", "science", "cryptography"]
autoexamples = false
exclude = [
    "/.github/*",
    "/examples/*",
    "/tests/*",
    "/.gitignore",
    "/Makefile",
]

[workspace]
members = ["."]
exclude = ["examples"]

[[bin]]
name = "atlas-cli"
path = "src/main.rs"

[features]
default = []
yaml = []
with-tdx = ["tdx_workload_attestation/host-gcp-tdx"]

[dependencies]
atlas-c2pa-lib = { version = "0.1.2" }

# Attestations
tdx_workload_attestation = { version = "0.1.0", default-features = false }
in_toto_attestation = { version = "0.1.0" }

# Core libraries
base64 = "0.22"
chrono = "0.4.42"  # For timestamp generation in mock attestation reports
env_logger = "0.11"
hex = "0.4"
indicatif = "0.18"
lazy_static = "1.4"
log = "0.4"
openssl = "0.10.74"
sha2 = "0.10"
thiserror = "2.0.17"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.4"
zeroize = { version = "1.8", features = ["derive"] }

# CLI and async/runtime
clap = { version = "4.5", features = ["derive"] }
tokio = "1.47.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_with = { version = "3.15.0", features = ["base64"] }
serde_yaml = "0.9"
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"

# HTTP client
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
subtle = "2.6.1"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release.build-override]
debug-assertions = true
